--- a/GenericCollections.Tests/GenericCollections.Tests.csproj
+++ b/GenericCollections.Tests/GenericCollections.Tests.csproj
@@ -47,7 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetTests.cs" />
+    <Compile Include="TestData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GenericCollections\GenericCollections.csproj">
